[package]
name = "cah-backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = [
    "json",
    "macros",
    "multipart",
    "query",
    "tower-log",
    "tracing",
    "ws",
] }
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie-signed"] }
bcrypt = "0.15.0"
bson = { version = "2.9.0", features = ["chrono", "chrono-0_4"] }
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
mongodb = "2.8.1"
nanoid = "0.4.0"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors", "trace", "normalize-path"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
